--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>GirarNET</title>
+        <link href="main.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>GirarNET, Somos más que internet</h1>
